2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* vagalumectl.1: Minor updates to the man page.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am
	* data/vagalume.desktop.in (X-Window-Icon): Use PIXMAPDIR instead
	of ICONDIR, which is no longer used.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* data/vagalume.desktop.in
	* data/vagalume.desktop.maemo
	* data/vagalume.desktop.moblin
	* Makefile.am (data/vagalume.desktop): Create a different .desktop
	file in each platform.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* INSTALL
	* Makefile.am
	* configure.ac
	* src/vgl-main-window.c: Add support for Moblin-based devices with
	a resolution of 800x480

2008-08-28  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_run_app): Use a weak pointer to set
	tray_icon to NULL.

2008-08-28  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c
	(vgl_main_window_init)
	(vgl_main_window_destroy): Don't call
	gtk_main_quit() after destroying the window, let the handler of
	the "destroy" signal do it.

	* src/controller.c (controller_run_app): Use a weak pointer to set
	mainwin to NULL after it has been destroyed.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/util.c (lastfm_url_encode): Minor updates.

	* TODO: Update TODO file.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/playlist.c (lastfm_track_destroy)
	(lastfm_track_set_cover_image)
	* src/protocol.c (lastfm_parse_track): Make all pointers in
	LastfmTrack const.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(renew_rsp_session): New function to renew a RSP session.
	(scrobble_track_thread)
	(set_nowplaying_thread): Renew the RSP session if it has expired.

	* src/scrobbler.c (rsp_set_nowplaying, rsp_scrobble): Detect
	correctly the BADSESSION response.

	Fixes: #2554

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c
	(lastfm_get_user_track_tags)
	(lastfm_get_track_tags)